文件名规范

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="localdata_exception">用户本地数据异常。</string>
     <string name="walletdata_failure">钱包数据获取失败。</string>
     <string name="null_wallet">获取的钱包信息为空。</string>
+    <string name="wallet_exception">钱包信息异常！</string>
 </resources>
