--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="walletdata_failure">钱包数据获取失败。</string>
     <string name="null_wallet">获取的钱包信息为空。</string>
     <string name="wallet_exception">钱包信息异常！</string>
+    <string name="transactioning">当前正在发起交易，请勿退出。</string>
 </resources>
