--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="password_error">密码输入不正确。</string>
     <string name="please_input_transaction_amount">请输入交易数额</string>
     <string name="please_input_destination_address">请输入收款账户地址</string>
+    <string name="verify_success">验证成功</string>
 </resources>
