1:首页显示交易区块信息 2:添加复制账户地址功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="please_input_transaction_amount">请输入交易数额</string>
     <string name="please_input_destination_address">请输入收款账户地址</string>
     <string name="verify_success">验证成功</string>
+    <string name="copy_acount_address_success">复制账户地址成功。</string>
 </resources>
