--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -17,7 +17,7 @@
     <string name="finish">完成</string>
     <string name="please_input_password_again">請再次輸入密碼</string>
     <string name="input_private_key">請輸入私鑰</string>
-    <string name="set_pwd_for_import_wallet">請為導入的錢包設置密碼</string>
+    <string name="set_pwd_for_import_wallet">請為導入的錢包設置16位字符的密碼</string>
     <string name="import_wallet_pwd_rule">密碼至少由6位帶**字符組成</string>
     <string name="confirm_two_pwd_is_consistent">請確認兩次密碼輸入一致！</string>
     <string name="main">首頁</string>
