--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -38,6 +38,7 @@
     <string name="please_input_destination_address">请输入收款账户地址</string>
     <string name="verify_success">验证成功</string>
     <string name="copy_acount_address_success">复制账户地址成功。</string>
+    <string name="sure_delete">确定删除：</string>
 
     <!--translate-->
     <string name="unlock">解锁</string>
