--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -40,6 +40,8 @@
     <string name="please_input_destination_address">請輸入收款帳戶地址</string>
     <string name="copy_acount_address_success">複製帳戶地址成功。</string>
     <string name="sure_delete">確定刪除：</string>
+    <string name="private_key_format_exception">私鑰格式異常</string>
+
     <!--translate   -->
 
     <string name="unlock">解鎖</string>
