--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -78,4 +78,6 @@
     <string name="modify_authorized_representatives">修改代表</string>
     <string name="address_alias">账户别名</string>
     <string name="save">保存</string>
+    <string name="Language_switching">语言切换</string>
+
 </resources>
