--- a/qrcode/src/main/res/values/strings.xml
+++ b/qrcode/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">qrcode</string>
+    <string name="app_name">Bcaas</string>
+    <string name="scan_warning">Please aim at the two-dimensional code and wait patiently</string>
+
 </resources>
