--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,6 @@
     <string name="save">Save</string>
     <string name="Language_switching">Language switching</string>
     <string name="scan_warning">Please aim at the two-dimensional code and wait patiently</string>
+    <string name="double_click_for_exit">Press the return button again to exit the program.</string>
 
 </resources>
