--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -81,5 +81,7 @@
     <string name="Language_switching">语言切换</string>
     <string name="scan_warning">请对准二维码，耐心等待</string>
     <string name="double_click_for_exit">再按一次返回键退出程序</string>
+    <string name="no_address_to_choose">当前没有可选的地址</string>
+    <string name="input_address_info">请输入地址的相关信息。</string>
 
 </resources>
