--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">bcaas</string>
 
-    <string name="walletinfo_must_not_null">Wallet information can not be empty!</string>
+    <string name="wallet_info_exception">Wallet information exception!</string>
     <string name="password_rule">The password is made up of at least eight digits.</string>
     <string name="set_pwd_for_import_wallet">Please set the 16 character password for the imported wallet.</string>
     <string name="import_wallet_pwd_rule">The password is composed of at least 6 bits with * characters.</string>
@@ -77,7 +77,7 @@
     <string name="send_email">Send by email</string>
     <string name="email_json_rule">When the APP is deleted,this JSON file is used to restore the wallet .We suggest you backup this file by email.</string>
     <string name="insert_address">Add address</string>
-    <string name="modify_authorized_representatives">Change Representative</string>
+    <string name="modify_authorized_representatives">Change authorized Representative</string>
     <string name="address_alias">Account alias</string>
     <string name="save">Save</string>
     <string name="Language_switching">Language switching</string>
