--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -85,5 +85,6 @@
     <string name="double_click_for_exit">再按一次返回鍵退出程序</string>
     <string name="no_address_to_choose">當前沒有可選的地址</string>
     <string name="input_address_info">請輸入地址的相關信息</string>
+    <string name="transaction_success">交易成功</string>
 
 </resources>
