--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="double_click_for_exit">Press the return button again to exit the program.</string>
     <string name="no_address_to_choose">No alternative address is currently available.</string>
     <string name="input_address_info">Please input the relevant information of the address.</string>
-    <string name="transaction_success">transaction success</string>
+    <string name="send_success">send success</string>
+    <string name="please_input_account_address">Please input account address.</string>
 
 </resources>
