--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -92,6 +92,7 @@
     <string name="send_success">發送成功</string>
     <string name="please_input_account_address">請輸入帳戶地址。</string>
     <string name="please_open_camera_permission">請手動打開相機權限</string>
+    <string name="transaction_to">向  %s   轉帳</string>
 
 
 </resources>
