--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,6 @@
     <string name="Language_switching">Language switching</string>
 
 
-
     <string name="scan_warning">Please aim at the two-dimensional code and wait patiently</string>
     <string name="double_click_for_exit">Press the return button again to exit the program.</string>
     <string name="no_address_to_choose">No alternative address is currently available.</string>
@@ -90,6 +89,7 @@
     <string name="send_success">send success</string>
     <string name="please_input_account_address">Please input account address.</string>
     <string name="please_open_camera_permission">Please manually open the camera privileges.</string>
+    <string name="transaction_to">Transfer to %s  </string>
 
 
 </resources>
