跳轉授權頁面

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -84,7 +84,6 @@
     <string name="Language_switching">語言切換</string>
 
 
-
     <string name="scan_warning">請對準二維碼，耐心等待</string>
     <string name="double_click_for_exit">再按一次返回鍵退出程序</string>
     <string name="no_address_to_choose">當前沒有可選的地址</string>
@@ -93,6 +92,7 @@
     <string name="please_input_account_address">請輸入帳戶地址。</string>
     <string name="please_open_camera_permission">請手動打開相機權限</string>
     <string name="transaction_to">向  %s   轉帳</string>
+    <string name="authorized_representative_address">授權代表地址帳戶</string>
 
 
 </resources>
