--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -89,5 +89,5 @@
     <string name="please_input_account_address">请输入账户地址。</string>
     <string name="please_open_camera_permission">请手动打开相机权限</string>
     <string name="transaction_to">向  %s   转账</string>
-
+    <string name="authorized_representative_address">授权代表地址账户</string>
 </resources>
