--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -8,7 +8,7 @@
     <string name="input_pwd">请输入密码</string>
     <string name="wallet_info">钱包信息</string>
     <string name="private_key">私钥</string>
-    <string name="email_json">邮件发送Json文件</string>
+    <string name="email_json">邮件发送文件</string>
     <string name="address_name">账户名称</string>
     <string name="address">地址</string>
     <string name="please_input_address">请输入地址</string>
@@ -72,7 +72,7 @@
     <string name="modify_password">修改密码</string>
     <string name="save_private_key_hint">建议将私钥信息写在纸上，私密保存</string>
     <string name="send_email">发送邮件</string>
-    <string name="email_json_rule">可通过邮件发送JSON文件(钱包加密文件，包含私钥，公钥等重要信息)，当APP被删除时，可用来重新导入恢复钱包</string>
+    <string name="email_json_rule">可通过邮件发送文件(钱包加密文件，包含私钥，公钥等重要信息)，当APP被删除时，可用来重新导入恢复钱包</string>
     <string name="insert_address">新增地址</string>
     <string name="modify_authorized_representatives">修改授权代表</string>
     <string name="address_alias">账户别名</string>
