--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -10,7 +10,7 @@
     <string name="input_pwd">請輸入密碼</string>
     <string name="wallet_info">錢包信息</string>
     <string name="private_key">私鑰</string>
-    <string name="email_json">郵件發送Json文件</string>
+    <string name="email_json">郵件發送文件</string>
     <string name="address_name">帳戶名稱</string>
     <string name="address">地址</string>
     <string name="please_input_address">情輸入地址</string>
@@ -76,7 +76,7 @@
     <string name="modify_password">修改密碼</string>
     <string name="save_private_key_hint">建議將私鑰信息寫在紙上，私密保存</string>
     <string name="send_email">發送郵件</string>
-    <string name="email_json_rule">可通過郵件發送JSON文件(錢包加密文件，包含私鑰，共鑰等重要信息)，當APP被刪除時，可用來重新導入恢復錢包</string>
+    <string name="email_json_rule">可通過郵件發送文件(錢包加密文件，包含私鑰，共鑰等重要信息)，當APP被刪除時，可用來重新導入恢復錢包</string>
     <string name="insert_address">新增地址</string>
     <string name="modify_authorized_representatives">修改授權代表</string>
     <string name="address_alias">帳戶別名</string>
