--- a/qrcode/src/main/res/values-zh-rCN/strings.xml
+++ b/qrcode/src/main/res/values-zh-rCN/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Bcaas</string>
+    <string name="app_name">扫描</string>
     <string name="scan_warning">请对准二维码，耐心等待</string>
 
 </resources>
